# meric_f1tenth

./: Commands  README.md  frames.gv
drive_log/: 0527.txt  metadata.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
maps/: 0415_1.pgm  0415_1.yaml  0415_2.pgm  0415_2.yaml  0416_1.pgm  0416_1.yaml  0416_2.data  0416_2.pgm  0416_2.yaml  0523_1.pgm  0523_1.yaml  0523_2.yaml  0523_3.pgm  0523_3.yaml  0528.pgm  0528.yaml  b1.pgm  b1.yaml  map_1743425188.pgm  map_1743425188.yaml  map_1743425634.pgm  map_1743425634.yaml  map_1748578304.pgm  map_1748578304.yaml  meric.pgm  meric.yaml  oksang.yaml  oksang1  oksang2
pf_run/: metadata.yaml  pf_run_0.db3
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/stanley2_avoidance/: package.xml  setup.cfg  setup.py
src/waypoint_generator/: CMakeLists.txt
src/waypoint_generator/include/: waypoint_generator.hpp
src/waypoint_generator/src/: .~lock.waypoints_opt.csv#  waypoint_generator.cpp  waypoint_visualizer.cpp  waypoints_odom.csv  waypoints_odom1.csv  waypoints_oksang.csv  waypoints_opt.csv  waypoints_opt1.csv
trash map/: map_1742970616.pgm  map_1743518130.pgm  map_1743518130.yaml  map_1743518340.pgm  map_1743518340.yaml  map_1744180825.pgm  map_1744180825.yaml  map_1744728465.pgm  map_1744728465.yaml  map_1747747567.pgm  map_1747747567.yaml  map_1747748052.pgm  map_1747748052.yaml  map_1747748189.pgm  map_1747748189.yaml  map_1748413163.pgm  map_1748413163.yaml
videos/: video.mov  video1.mov
(+80 files in other folders)
